# 6502

./: .gitignore  .gitmodules  README.md  comp.circ  imageConvert.py  microcodeGen.py  microcodeSpec.yaml
65816/: .gitignore  README.txt  build.py  buildTestAtariWriter.sh  buildTestDisplay.sh  buildUpdateRom.sh  parseLog.py  rom.conf  uart.conf
ADR/: 0000-test-things-on-the-final-hardware.md  0001-rom-wiring.md  0002-atari-binary-format.md  0003-change-uart-baud-rate.md  0004-uart-send-data-and-wait.md  0005-eliminate-base-in-FORTH.md  0006-FORTH-NFA-high-bit.md  0007-FORTH-line-ending-with-backslash.md  0008-FORTH-line-input-buffer.md  0009-same-uart6502-for-Arduino.md  0010-disable-Arduino-autoreboot.md  0011-autodetect-peripherals.md  0012-UART-backpressure.md  0013-UART-interrupt.md
ESPconnector/: .gitignore
figForth/: Implementation results.txt
logisim/: README.md
music/: .gitignore  convert.py  player.4th
openSCAD/: bus.scad  common.scad  cpu.scad  marcus.scad  ram.scad  resetAndClock.scad  rom.scad  uart.scad  via1.scad  via2.scad
progs/: convert.py  (+7 more)
uartConnector/pcPart/: README.md  devRun.py  pyproject.toml  telnet.py  uart6502.py
uartConnector/pcPart/libs/: consts.py  pingCommand.py  readCommand.py  runCommand.py  serialPort.py  testCommand.py  utils.py  writeCommand.py
uartConnector/pcPart/src/uart6502/: main.py
uartConnector/pcPart/src/uart6502/libs/: busOutput.py  compileRunCommand.py  consts.py  debugCommand.py  device.py  pingCommand.py  readCommand.py  runCommand.py  testCommand.py  timer.py  typeCommand.py  utils.py  writeCommand.py
(+333 files in other folders)
